# bigbrainwordle

./: Cargo.toml  README.md
src/: app.rs  main.rs  text.rs
src/data/: mod.rs
src/entropy/: brain.rs  feedback.rs  mod.rs  solver.rs
